gcp/flypa/firewall/firewall-rules.json
[
  {
    "allowed": [
      {
        "IPProtocol": "all"
      }
    ],
    "creationTimestamp": "2023-03-22T06:50:23.806-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "8117891030440130928",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true,
      "metadata": "INCLUDE_ALL_METADATA"
    },
    "name": "allow-ingress-from-iap",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/allow-ingress-from-iap",
    "sourceRanges": [
      "35.235.240.0/20"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "12345-12346",
          "5432"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2024-07-31T17:50:50.187-07:00",
    "description": "for dataflow ",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4554186000083412229",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true,
      "metadata": "INCLUDE_ALL_METADATA"
    },
    "name": "allow-internal-dbproxy-access",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/allow-internal-dbproxy-access",
    "sourceRanges": [
      "10.1.0.0/20",
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp"
      }
    ],
    "creationTimestamp": "2024-07-31T17:34:08.895-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4673670212141672175",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "flypa-tw-testing-vpc-allow-health-check",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/flypa-tw-testing-vpc-allow-health-check",
    "sourceRanges": [
      "35.191.0.0/16",
      "130.211.0.0/22",
      "209.85.152.0/22",
      "209.85.204.0/22"
    ],
    "targetTags": [
      "lb-health-check"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp"
      }
    ],
    "creationTimestamp": "2024-07-31T17:34:09.178-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "3829433968512952046",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "flypa-tw-testing-vpc-allow-health-check-ipv6",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/flypa-tw-testing-vpc-allow-health-check-ipv6",
    "sourceRanges": [
      "2600:1901:8001::/48",
      "2600:2d00:1:b029::/64"
    ],
    "targetTags": [
      "lb-health-check"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2024-07-31T17:34:09.383-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2340468600554874606",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true,
      "metadata": "INCLUDE_ALL_METADATA"
    },
    "name": "flypa-tw-testing-vpc-allow-http",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/flypa-tw-testing-vpc-allow-http",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "http-server"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "443",
          "12345-12346",
          "5432"
        ]
      }
    ],
    "creationTimestamp": "2022-11-15T00:24:27.517-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "157882665979015764",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "flypa-tw-testing-vpc-allow-https",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1010,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/flypa-tw-testing-vpc-allow-https",
    "sourceRanges": [
      "10.1.0.0/20"
    ],
    "targetTags": [
      "https-server",
      "dataflow"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp"
      },
      {
        "IPProtocol": "udp"
      },
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "esp"
      },
      {
        "IPProtocol": "ah"
      },
      {
        "IPProtocol": "sctp"
      }
    ],
    "creationTimestamp": "2023-02-13T00:47:14.154-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "984106138880722941",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-flypa-tw-testing-gke-7d9daba2-all",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/gke-flypa-tw-testing-gke-7d9daba2-all",
    "sourceRanges": [
      "10.1.16.0/20"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  },
  {
    "creationTimestamp": "2023-02-13T00:47:14.175-08:00",
    "denied": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "91929474589018109",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true,
      "metadata": "INCLUDE_ALL_METADATA"
    },
    "name": "gke-flypa-tw-testing-gke-7d9daba2-exkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/gke-flypa-tw-testing-gke-7d9daba2-exkubelet",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "creationTimestamp": "2023-02-13T00:47:14.191-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7198530195324946429",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-flypa-tw-testing-gke-7d9daba2-inkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 999,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/gke-flypa-tw-testing-gke-7d9daba2-inkubelet",
    "sourceRanges": [
      "10.1.16.0/20"
    ],
    "sourceTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10250",
          "443"
        ]
      }
    ],
    "creationTimestamp": "2023-02-13T00:47:14.129-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2289720491138893821",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-flypa-tw-testing-gke-7d9daba2-master",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/gke-flypa-tw-testing-gke-7d9daba2-master",
    "sourceRanges": [
      "10.1.240.0/28"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "1-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "1-65535"
        ]
      }
    ],
    "creationTimestamp": "2023-02-13T00:47:14.479-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "6867115963121420285",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-flypa-tw-testing-gke-7d9daba2-vms",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/gke-flypa-tw-testing-gke-7d9daba2-vms",
    "sourceRanges": [
      "10.1.0.0/20"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "30000-32767",
          "8888"
        ]
      }
    ],
    "creationTimestamp": "2023-02-13T17:20:38.663-08:00",
    "description": "GCE L7 firewall rule",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2889851890542534409",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false,
      "metadata": "INCLUDE_ALL_METADATA"
    },
    "name": "k8s-fw-l7--93dad08deb871cf9",
    "network": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/networks/flypa-tw-testing-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/flypa-tw-testing/global/firewalls/k8s-fw-l7--93dad08deb871cf9",
    "sourceRanges": [
      "130.211.0.0/22",
      "35.191.0.0/16"
    ],
    "targetTags": [
      "gke-flypa-tw-testing-gke-7d9daba2-node"
    ]
  }
]
